Add social media sharing preview

--- a/index.html
+++ b/index.html
@@ -5,6 +5,46 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fab'store | Fashion</title>
+    <!-- HTML Meta Tags -->
+    <meta
+      name="description"
+      content="A3get specializes in creating innovative websites and mobile applications, transforming your ideas into digital solutions. Explore our comprehensive services in app and web development to boost your online presence and engage your audience effectively."
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://a3get.com/" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="A3get | Website & Mobile App Development Services"
+    />
+    <meta
+      property="og:description"
+      content="A3get specializes in creating innovative websites and mobile applications, transforming your ideas into digital solutions. Explore our comprehensive services in app and web development to boost your online presence and engage your audience effectively."
+    />
+    <meta
+      property="og:image"
+      content="https://opengraph.b-cdn.net/production/documents/0875488e-3da4-4f1d-8c49-b59b1dcf2cf2.jpg?token=pc0R753k183IZS5Mo6mGMrfzb0CvO2mbUEZnBhHmsuM&height=630&width=1200&expires=33248004528"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="a3get.com" />
+    <meta property="twitter:url" content="https://a3get.com/" />
+    <meta
+      name="twitter:title"
+      content="A3get | Website & Mobile App Development Services"
+    />
+    <meta
+      name="twitter:description"
+      content="A3get specializes in creating innovative websites and mobile applications, transforming your ideas into digital solutions. Explore our comprehensive services in app and web development to boost your online presence and engage your audience effectively."
+    />
+    <meta
+      name="twitter:image"
+      content="https://opengraph.b-cdn.net/production/documents/0875488e-3da4-4f1d-8c49-b59b1dcf2cf2.jpg?token=pc0R753k183IZS5Mo6mGMrfzb0CvO2mbUEZnBhHmsuM&height=630&width=1200&expires=33248004528"
+    />
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
   </head>
   <body>
     <div id="root"></div>
